# OSS-AI-Agent-Tool

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  compose.dev.yaml  docker-compose.prod.yaml  go.work  package-lock.json  package.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  kubesec.yml  release-charts.yml  release-images.yml  security.yml
agents/architect/: agent.md
agents/code-writer/: agent.md
agents/compliance-advisor/: agent.md
agents/docs-writer/: agent.md
agents/evaluator/: agent.md
agents/performance-engineer/: agent.md
agents/release-manager/: agent.md
agents/security-auditor/: agent.md
agents/test-runner/: agent.md
apps/cli/: package-lock.json  package.json
apps/gateway-api/: .dockerignore  Dockerfile  go.mod  main.go
apps/gui/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
charts/oss-ai-agent-tool/: Chart.yaml  values.yaml
docs/: SECURITY-THREAT-MODEL.md  agents.md  ci-cd.md  configuration.md  consumer-enterprise-modes.md  docker-quickstart.md  gui.md  kubernetes-quickstart.md  model-authentication.md  planner.md  providers-supported.md  remediation-plan.md  routing.md  security-scanning.md
docs/agents/: README.md
docs/architecture/: components.md  context-engine.md  dataflow.md  deployment.md  observability.md  overview.md  policies.md  runtime-modes.md
docs/compliance/: DPIA-template.md  README.md  data-inventory.md  data-subject-rights.md  model-card-template.md  retention-policy.md
docs/plans/: codex_master_plan.md
docs/reference/: api.md  cli.md  events.md  helm-values.md
services/indexer/: Cargo.toml  Dockerfile  README.md
services/indexer/src/: ast.rs  lsp.rs  main.rs  security.rs  semantic.rs
services/indexer/tests/: smoke.rs
(+122 files in other folders)
