[package]
name = "ossaat-indexer"
version = "0.1.0"
edition = "2021"
authors = ["OSS AI Agent Tool"]
description = "Symbolic/semantic indexer service placeholder"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
