[package]
name = "ossaat-indexer"
version = "0.1.0"
edition = "2021"
authors = ["OSS AI Agent Tool"]
description = "Symbolic/semantic indexer service placeholder"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
tower-lsp = "0.20"
tree-sitter = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-json = "0.21"
chrono = { version = "0.4", features = ["serde"] }
twox-hash = "1"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
parking_lot = "0.12"
regex = "1"
tower = { version = "0.4", features = ["util"] }
